# asciipic

./: .gitignore  Makefile  README.md  pyproject.toml
src/asciipic/: __init__.py  charsets.py  cli.py  converter.py  engine.py  generator.py  glyph_atlas.py  model.py  neural.py  sampler.py  sampling.py  terminal.py
src/asciipic/generator/: __init__.py  font.py  neural.py
src/data/: ascii
src/data/neural/: weights.npz
tests/: conftest.py  test_converter.py  test_generator.py  test_glyph_atlas.py  test_model.py  test_neural.py  test_sampling.py
